# serializer version: 1
# name: TestVarOption.test[on]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int key = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test[toggle]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int key = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_dot[on]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int bar = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_dot[toggle]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int bar = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_dot_deep_merge[on]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int bar = 1;
  const int baz_qux = 2;
  const int baz_baz_qux = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_dot_deep_merge[toggle]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int bar = 1;
  const int baz_qux = 2;
  const int baz_baz_qux = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_dot_shallow_merge[on]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int bar = 1;
  const int baz = 2;
  const int qux = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_dot_shallow_merge[toggle]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int bar = 1;
  const int baz = 2;
  const int qux = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_merge_with_config[on]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int r = 1;
  const int g = 2;
  const int b = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_merge_with_config[toggle]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int r = 1;
  const int g = 2;
  const int b = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_multiple[on]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int WORLD = 5;
  const int key = WORLD;
  void main() {}
  '''
# ---
# name: TestVarOption.test_multiple[toggle]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int WORLD = 5;
  const int key = WORLD;
  void main() {}
  '''
# ---
# name: TestVarOption.test_override[on]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int WORLD = 5;
  const int key = WORLD;
  void main() {}
  '''
# ---
# name: TestVarOption.test_override[toggle]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int WORLD = 5;
  const int key = WORLD;
  void main() {}
  '''
# ---
# name: TestVarOption.test_override_deep[on]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int foo_bar_baz = 1;
  void main() {}
  '''
# ---
# name: TestVarOption.test_override_deep[toggle]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int foo_bar_baz = 1;
  void main() {}
  '''
# ---
# name: TestVarOption.test_override_from_deep[on]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int foo_bar = 1;
  void main() {}
  '''
# ---
# name: TestVarOption.test_override_from_deep[toggle]
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int foo_bar = 1;
  void main() {}
  '''
# ---
